--- a/simple-webapp/pom.xml
+++ b/simple-webapp/pom.xml
@@ -6,6 +6,7 @@
 
   <groupId>org.sonatype.mavenbook.simpleweb</groupId>
   <artifactId>simple-webapp</artifactId>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
 
   <name>simple-webapp</name>
